# 3615-spotify

./: 3615-spotify.py  README.md  pyproject.toml
deployment/: 3615-spotify.service  minitel_spotify.sh
